# gmtk-jam24

./: Cargo.toml
assets/textures/: whale_01.kra
concept/: Concept.md
concept/.obsidian/: workspace.json
src/: collision.rs  main.rs  map.rs  menu.rs  player.rs
wasm/: export_commands_wasm.txt  index.html
